<?xml version="1.0" encoding="utf-8"?>
<!--Description: 
	UI after click new itineraries on main menu
	User input name of new advanture
	mock P3-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation		= "vertical"
	android:layout_width	= "match_parent"
	android:layout_height	= "match_parent"
	android:background		= "@drawable/secondary_layout_color"
>
<include android:id="@+id/topmenu"
	    	     layout="@layout/toplevel_content"/>

	<EditText
		android:id						= "@+id/name_adventure_edittext"
		android:layout_width			= "200dp"
		android:layout_height			= "wrap_content"
		android:hint					= "@string/adventure_name"
		android:layout_centerInParent	= "true"
	/>
	<TextView
		android:id						= "@+id/name_adventure_textview"
		android:layout_width			= "wrap_content"
		android:layout_height			= "wrap_content"
		android:layout_above			= "@id/name_adventure_edittext"
		android:text					= "@string/name_adventure_intro"
		android:layout_centerHorizontal	= "true"
	/>

	<Button
		android:id						= "@+id/name_adventure_confirm"
		android:layout_width			= "wrap_content"
		android:layout_height			= "wrap_content"
		android:layout_alignBottom		= "@+id/name_adventure_edittext"
		android:layout_alignParentRight	= "true"
		android:text					= "@string/confirm" 
		android:onClick					= "initialAdventureName"
		android:background				= "#00000000"
	 />

</RelativeLayout>	    	     